--- a/css/fonts.css
+++ b/css/fonts.css
@@ -7,6 +7,10 @@
 	src: url("../fonts/LatoRegular.ttf") format("truetype");
 }
 @font-face {
+	font-family: "Lato-Light";
+	src: url("../fonts/LatoLight.ttf") format("truetype");
+}
+@font-face {
 	font-family: "PT_Serif-Web-Bold";
 	src: url("../fonts/PT_Serif-Web-Bold.ttf") format("truetype");
 }
