--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Serif+Caption');
+@import url('https://fonts.googleapis.com/css?family=Lato:300');
 body {
 	font: 1.8rem "Lato-Regular", sans-serif;
 	min-width: 320px;
@@ -212,11 +213,39 @@ label.error {
 }
 .product_prev {
 	left: 0;
-	top: 46.5%;
+	top: 32%;
+}
+.product .colors {
+	display: inline-block;
+	margin: 4rem auto 0;
+}
+.product .colors div {
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-o-border-radius: 50%;
+	-ms-border-radius: 50%;
+	border-radius: 50%;
+	width: 3rem;
+	height: 3rem;
+	cursor: pointer;
+	float: left;
+	margin-right: 25px;
+}
+.product .colors div:last-of-type {
+	margin-right: 0;
+}
+.product .colors .red {
+	background-color: #841327;
+}
+.product .colors .dark_grey {
+	background-color: #442e33;
+}
+.product .colors .black {
+	background-color: #000;
 }
 .product_next {
 	right: 0;
-	top: 46.5%;
+	top: 32%;
 }
 .next {
 	background-image: url(../img/next.png);
@@ -394,6 +423,12 @@ header {
 	color: #5a1b52;
 	margin: 4rem 0 5rem;
 }
+.earn .row:nth-of-type(4) h4 {
+	margin-top: 0;
+}
+.earn .row:last-of-type h4 {
+	margin-top: 6rem;
+}
 .earn p {
 	line-height: 2.8rem;
 	color: #424242;
@@ -417,9 +452,6 @@ header {
 	border-radius: 3px;
 	border: solid 1px #fbf7e0;
 	z-index: 10;
-}
-.earn .img_wrapper .img_mask {
-
 }
 .cert {
 	background-image: url(../img/cert_bg.png);
@@ -465,6 +497,7 @@ header {
 .product h5 {
 	color: #424242;
 	font: 1.8rem "Lato-Regular", sans-serif;
+	margin: 2rem 0 0;
 }
 .product .product_circle {
 	width: 370px;
@@ -472,7 +505,6 @@ header {
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	border-radius: 50%;
-	border: solid 1px red;
 	position: relative;
 }
 .product .product_circle img {
@@ -508,35 +540,174 @@ header {
 .product .slick-active.slick-current {
 	left: 70px;
 }
-.product .product_item {
-	border-radius: 50%;
-}
+
 .product .slick-active.slick-center {
 	left: 0;
 	z-index: 33333;
 }
+.product .slick-active.slick-slide .product_circle {
+	border: 1px #b5c8db solid;
+}
 .product .slick-active.slick-center .product_circle {
 	border: 1px wheat solid;
-	z-index: 999;
-	position: relative;
+
+}
+.product .slick-active.slick-current .product_circle {
+	border: 1px #98bd8b solid;
 }
 .product .product_circle {
 	background-color: #fff;
 }
-
-.product .slick-center {
-	
+.product .product_slider {
+	margin: 5rem 0;
 }
-.product .slick-active:nth-of-type(2) {
+.product p {
+	margin-bottom: 2rem;
+}
+/*.product .slick-active:nth-of-type(2) {
 	position: relative;
 	z-index: 222;
 	top: 100px;
-}
+}*/
 /*.product .slick-active:nth-of-type(2) .product_circle {
 	border: solid 1px #edd8c8;
 }*/
+/*.eco .container {
+	width: 1260px;
+}*/
+.eco {
+	overflow: hidden;
+}
+.eco .row {
+	text-align: left;
+	height: 316px;
+	position: relative;
+}
+.eco .row:first-of-type:before {
+	content: "";
+	position: absolute;
+	height: 100%;
+	width: 200%;
+	top: 2px;
+	left: -500px;
+	right: 0;
+	margin: auto;
+	border-top: 2px solid rgb(237,216,200);
+}
+.eco .row:nth-of-type(2):before {
+	content: "";
+	position: absolute;
+	top: 0;
+	height: 100%;
+	width: 200%;
+	left: -500px;
+	border-top: 5px solid rgb(182,214,234);
+}
+.eco .row:last-of-type:before {
+	content: "";
+	position: absolute;
+	height: 100%;
+	width: 200%;
+	bottom: 0;
+	left: -500px;
+	right: 0;
+	margin: auto;
+	border-top: 5px solid rgb(182,214,234);
+}
+.eco .row:last-of-type:after {
+	content: "";
+	position: absolute;
+	top: 5px;
+	left: 0;
+	background-image: url(../img/eco_row_3.jpg);
+	background-position: center top;
+	height: 100%;
+	width: 1258px;
+	background-repeat: no-repeat;
+}
+.eco .row:nth-of-type(2):after {
+	content: "";
+	position: absolute;
+	top: 5px;
+	left: 0;
+	background-image: url(../img/eco_row_2.jpg);
+	background-position: center top;
+	height: 100%;
+	width: 1258px;
+	background-repeat: no-repeat;
+}
+.eco .row:first-of-type:after {
+	content: "";
+	position: absolute;
+	top: 5px;
+	left: 0;
+	background-image: url(../img/eco_row_1.jpg);
+	background-position: center top;
+	height: 100%;
+	width: 1258px;
+	background-repeat: no-repeat;
+}
+.row div {
+	max-height: 100%;
+}
+.eco h3 {
+	margin-bottom: 8rem;
+}
+.eco .eco_item {
+	padding: 5rem 0;
+}
+.eco .eco_item p, .eco .eco_item h4 {
+	position: relative;
+	z-index: 3;
+}
+.eco span {
+	font: 25rem "Lato", sans-serif;
+	line-height: 32rem;
+	position: absolute;
+	z-index: 2;
+	top: 0;
+}
+.eco img {
+	position: absolute;
+	left: -75px;
+	top: -75px;
+	z-index: 1;
+}
+.eco h4 {
+	font: 2.6rem "PT_Serif-Web-Bold", sans-serif;
+	color: #5a1b52;
+	margin-bottom: 5rem;
+}
+.eco p {
+	line-height: 2.8rem;
+	color: #424242;
+}
+.eco .row:first-of-type span {
+	color: #f0e7b7;
+}
+.eco .row:last-of-type span {
+	color: #f0e7b7;
+}
+.eco .row:first-of-type .col-md-4:nth-of-type(2) span, .eco .row:last-of-type .col-md-4:nth-of-type(2) span {
+	color: #fbf7e0;
+}
+.eco .row:nth-of-type(2) span {
+	color: #dfcab9;
+}
+.eco .row .col-md-4:last-of-type span {
+	right: -94px;
+}
+.eco .row .col-md-4:nth-of-type(2) span {
+	right: 0;
+	left: 0;
+	text-align: center;
+}
+.eco .row .col-md-4:first-of-type span {
+	left: -30px;
+}
 .discount {
 	background-image: url(../img/discount_bg.png);
+	top: 0;
 }
 .discount h3 {
 	color: #5a1b52;
@@ -675,11 +846,11 @@ header {
 }
 .review_prev {
 	left: 0;
-	top: 38%;
+	top: 40%;
 }
 .review_next {
 	right: 0;
-	top: 38%;
+	top: 40%;
 }
 .contact img {
 	width: 100%;
