--- a/css/media.css
+++ b/css/media.css
@@ -24,6 +24,49 @@
 	section {
 		overflow: hidden;
 	}
+	.desc {
+		padding-right: 0;
+	}
+	.logo {
+		padding-top: 10px;
+	}
+	h1 {
+		font-size: 5rem;
+	}
+	h2 {
+		font-size: 2.8rem;
+		padding: 0!important;
+		left: 15px;
+	}
+	header {
+		background-position: 45% top;
+	}
+	.earn h4 {
+		margin: 4rem 0 2rem;
+	}
+	.cert h3 {
+		font-size: 4.2rem;
+	}
+	.cert .left_cert p {
+		font-size: 2.2rem;
+	}
+	.form_wrapper h6 {
+		font-size: 3.2rem;
+	}
+	.form_wrapper p {
+		margin-bottom: 1.8rem;
+	}
+	.eco img {
+		max-width: 400px;
+		left: -35px;
+		top: -35px;
+	}
+	.eco .row:after {
+		left: -120px!important;
+	}
+	.step p br {
+		display: none;
+	}
 }
 
 /* Medium Devices, Desktops */
@@ -33,6 +76,79 @@
 	}
 	footer .row div  {
 		text-align: center;
+	}
+	.made_by p, .copyright p {
+		font-size: 2.2rem;
+	}
+	.top_phone {
+		font-size: 1.6rem;
+	}
+	.desc {
+		font-size: 1.4rem;
+		padding-left: 0;
+		padding-top: 6px;
+	}
+	header {
+		background-position: center top;
+		min-height: 1px;
+		padding-bottom: 40px;
+		-webkit-background-size: cover;
+		background-size: cover;
+	}
+	h1 {
+		margin-top: 1rem;
+		font-size: 4rem;
+		line-height: 5rem;
+	}
+	.top_btn {
+		top: -3px;
+	}
+	.top_head {
+		padding-top: 7px;
+	}
+	.present {
+		padding-top: 8rem;
+	}
+	.cert h3 {
+		font-size: 5rem;
+	}
+	.cert {
+		-webkit-background-size: 210%;
+		background-size: 210%;
+		padding-bottom: 0;
+	}
+	.eco {
+		padding-top: 0;
+	}
+	.eco p {
+		text-align: center;
+		max-width: 400px;
+		margin: 0 auto;
+	}
+	.earn h3 br {
+		display: none;
+	}
+	.eco h4 {
+		text-align: center;
+	}
+	.eco img {
+		display: none;
+	}
+	.eco .col-md-4 {
+		border-bottom: 3px solid rgb(182,214,234);
+	}
+	.eco .row span {
+		left: 0!important;
+		right: auto!important;
+	}
+	.eco .row {
+		height: auto;
+	}
+	.eco .row:before {
+		border: 0!important;
+	}
+	.eco .row .col-md-4 {
+		background-image: linear-gradient(to right, #faf6e0, #fff, #faf6e0);
 	}
 }
 
